Tue Feb 17 22:00:01 UTC 2009 / Arnaud Quette <aquette@debian.org>

 - drivers/Makefile.am: Fix snmp-ups overlinking with lcrypto.
   (Debian Lintian report)

2.4.1

Mon Feb 16 17:41:32 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - configure.in: 2.4.1

Mon Feb 16 16:13:47 UTC 2009 / David Goncalves <david@lestat.st>

 - scripts/python/app/NUT-Monitor: Changed version from 1.0 to 1.1. Changed
   the way NUT-Monitor deals with 'ups.status' var to better handle composite
   status (OL + TRIM, OL + CHRG, ...)

Thu Feb 12 13:23:41 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - scripts/udev/Makefile.am, scripts/hal/Makefile.am, scripts/hotplug/Makefile.am,
   Makefile.am: fix the autotools issue with the clean/distclean target removing
   the USB helper files.
   
Wed Feb 11 10:43:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - data/driver.list: Updated list with ups supported by microdowell driver.

Thu Feb 05 22:16:10 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - drivers/microdowell.c: Cleaned some of the code. Fixed reading of ups.conf variables.

Wed Feb 04 15:01:20 UTC 2009 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Added microdowell.c/h into drivers/. add man/microdowell.8. Adjusted
   drivers/Makefile.am and man/makefile.am. Adjusted the code for 2.4.0
   in the microdowell.c.

2.4.0

Wed Jan 28 10:18:41 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>
 
 - configure.in: 2.4.0

Tue Jan 27 14:50:54 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - data/driver.list, NEWS: mention Eaton (and Powerware) BladeUPS

Tue Jan 27 13:27:51 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - UPGRADING: mention Charles' bash completion routine for upsc.

Tue Jan 27 08:28:22 UTC 2009 / Arnaud Quette <ArnaudQuette@Eaton.com>

 - scripts/udev/Makefile.am: use a dash to separate the name of the udev rule,
   not an underscore (patch from Scott James Remnant, Ubuntu).
 - scripts/udev/README: update